- Switched from String to Array for developmentMethod - sealant_material -> decommission_sealant_material - backfill_material -> decomission_backfill_material - fixed well tag search (old code sneaked back in!) - Fix spelling mistake (decomission -> decommission)

--- a/app/backend/wells/templates/wells/well_detail.html
+++ b/app/backend/wells/templates/wells/well_detail.html
@@ -901,14 +901,14 @@
         <div class="col-md-6 col-print-6 print-compressed">
             <div class="row no-gutters print-compressed">
                 <div class="col-md-12 col-print-12 print-compressed">
-                    <label for="sealant_material">{% verbose_name well "sealant_material" %}:</label>
-                    <span id="sealant_material">{{well.sealant_material|default_if_none:'&nbsp;'}}</span>
+                    <label for="decommission_sealant_material">{% verbose_name well "decommission_sealant_material" %}:</label>
+                    <span id="decommission_sealant_material">{{well.decommission_sealant_material|default_if_none:'&nbsp;'}}</span>
                 </div>
             </div>
             <div class="row no-gutters print-compressed">
                 <div class="col-md-12 col-print-12 print-compressed">
-                    <label for="backfill_material">{% verbose_name well "backfill_material" %}:</label>
-                    <span id="backfill_material">{{well.backfill_material|default_if_none:'&nbsp;'}}</span>
+                    <label for="decommission_backfill_material">{% verbose_name well "decommission_backfill_material" %}:</label>
+                    <span id="decommission_backfill_material">{{well.decommission_backfill_material|default_if_none:'&nbsp;'}}</span>
                 </div>
             </div>
         </div>
